<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:micopi="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_assign"
        android:icon="@drawable/ic_done_white_36dp"
        android:title="@string/assign_to_contact"
        micopi:showAsAction="always|withText"/>

    <item android:id="@+id/action_previous_image"
        android:icon="@drawable/ic_arrow_back_white_36dp"
        android:title="@string/previous_image"
        micopi:showAsAction="always"/>

    <item android:id="@+id/action_next_image"
        android:icon="@drawable/ic_arrow_forward_white_36dp"
        android:title="@string/next_image"
        micopi:showAsAction="always"/>

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="@string/pick_contact"
        micopi:showAsAction="ifRoom|withText" />

    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_36dp"
        android:title="@string/save_image_file"
        micopi:showAsAction="ifRoom|withText" />

</menu>
